--- a/assets/inlineplayer.css
+++ b/assets/inlineplayer.css
@@ -3,7 +3,7 @@ a.sm2_link {
  padding-left:22px;
  min-height:16px;
  vertical-align:middle;
- background-color:none;
+ background-color:transparent;
  padding:3px 8px 3px 25px;
  width:100%;
  text-decoration:none;
