--- a/assets/inlineplayer.css
+++ b/assets/inlineplayer.css
@@ -1,27 +1,11 @@
 a.sm2_link {
- display:inline-block;
- min-height:30px;
- vertical-align:middle;
- background-color:transparent;
- padding:4px 8px 0px 30px;
- width:100%;
- text-decoration:none;
- overflow:hidden;
- white-space:nowrap;
- text-overflow:ellipsis;
- border-bottom:none;
+width:100%;
+overflow:hidden;
+white-space:nowrap;
+text-overflow:ellipsis;
 }
-a.sm2_link, a.sm2_paused:hover,
-a.sm2_link:hover {
- background-image:url(/assets/extensions/zerosonesfun-sm2/play.png);
- background-position:0px 50%;
- background-repeat:no-repeat;
-}
-a.sm2_paused:hover {
- background:url(/assets/extensions/zerosonesfun-sm2/play.png) no-repeat 0px 50%;
-}
-a.sm2_playing,
-a.sm2_playing:hover {
- background:url(/assets/extensions/zerosonesfun-sm2/pause.png) no-repeat 0px 50%;
- text-decoration:none;
+a.sm2_link::before {
+font-family: "Font Awesome 5\ Free";
+content: "\f58f";
+margin-right: 3px;
 }
